# leitner

./: cmd.py  hardest.py  main.py  pyproject.toml  quests.py  setup.py
leiner-card/: main.py
leitner/: __init__.py  __main__.py  entry.py  pyproject.toml
leitner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/leitner/: leitner.py
