[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "leitner-flashcards"
version = "0.1.0"
description = "A CLI tool for the Leitner flashcard system."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
leitner = "leitner_flashcards.__main__:main"
